--- a/index.html
+++ b/index.html
@@ -3,188 +3,167 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohd Faiz Faheem's Resume</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Resume - Mohd Faiz Faheem</title>
     <style>
-        /* Reset some default styles */
-        body, h1, h2, ul, li {
-            margin: 0;
-            padding: 0;
-        }
-
-        /* Global Styles */
+        /* General Styling */
         body {
             font-family: Arial, sans-serif;
-            background-color: #fff; /* White background */
-            color: #333;
+            background-color: #f9f9f9;
             margin: 0;
             padding: 0;
+            color: #333;
         }
 
-        a {
-            text-decoration: none;
-            color: #007BFF; /* Link color */
-            transition: color 0.3s ease; /* Smooth color transition */
-        }
-
-        a:hover {
-            color: #0056b3; /* Hover color */
-        }
-
-        button {
-            padding: 10px 20px;
-            background-color: #007BFF; /* Button background color */
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease; /* Smooth background color transition */
-        }
-
-        button:hover {
-            background-color: #0056b3; /* Hover background color */
-        }
-
-        /* Header Styles */
+        /* Header Section */
         header {
-            background-color: #FF9933; /* Saffron color */
+            background-color: #000; /* Black from the Palestine flag */
             color: #fff;
+            padding: 20px;
             text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+
+        /* Section Styling */
+        section {
+            max-width: 900px;
+            margin: 30px auto;
             padding: 20px;
-        }
-
-        h1 {
-            font-size: 32px;
-            margin-bottom: 10px;
-            font-style: italic; /* Italics */
-        }
-
-        nav ul {
-            list-style: none;
-        }
-
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-
-        /* Main Container Styles */
-        .container {
-            display: grid;
-            grid-template-rows: auto 1fr auto;
-            min-height: 100vh;
-        }
-
-        main {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff; /* White background */
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-            border-radius: 5px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         h2 {
-            font-size: 24px;
+            border-bottom: 3px solid #e60000; /* Red from the Palestine flag */
+            color: #e60000;
+            padding-bottom: 5px;
             margin-bottom: 15px;
-            font-style: italic; /* Italics */
         }
 
-        section {
-            margin-bottom: 30px;
+        p, li {
+            font-size: 1.1em;
+            line-height: 1.6;
         }
 
-        /* Footer Styles */
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        ul li::before {
+            content: "• ";
+            color: #00b140; /* Green from the Palestine flag */
+        }
+
+        /* Footer Section */
         footer {
-            text-align: center;
-            background-color: #138808; /* Green color */
+            background-color: #000;
             color: #fff;
+            text-align: center;
             padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
 
-        /* Keyframe Animation */
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-            }
+        /* Button Styling */
+        a {
+            text-decoration: none;
+            color: #00b140;
         }
 
-        /* Responsiveness */
-        @media screen and (max-width: 768px) {
-            main {
-                padding: 10px;
-            }
-        }
-
-        /* Performance Optimization - Minimalistic CSS */
     </style>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <div class="header-overlay"></div>
-            <h1>Mohd Faiz Faheem</h1>
-            <nav>
-                <ul>
-                    <li><a href="mailto:faizfaheem83@gmail.com" style="color: black;">Email</a></li>
-                    <li><a href="tel:7906010804" style="color: black;">Mobile: 7906010804</a></li>
-                    <li><a href="https://github.com/faizfaheem" style="color: black;">GitHub</a></li>
-                    <li><a href="https://www.linkedin.com/in/mohd-faiz-faheem-6a31991a0/" style="color: black;">LinkedIn</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <section id="academic-details">
-                <h2>Academic Details</h2>
-                <ul>
-                    <li><i>2018-2022:</i> B.TECH in Computer Science - Graphic Era University Dehradun (85.78%)</li>
-                    <li><i>2018:</i> I.S.C - ST, Mary's School (78.8%)</li>
-                    <li><i>2016:</i> I.C.S.E - ST, Mary's School (89.9%)</li>
-                </ul>
-            </section>
 
-            <section id="work-experience">
-                <h2>Work Experience</h2>
-                <ul>
-                    <li><i>Skill Development Training at BRIJ GOPAL CONSTRUCTION COMPANY (01, Mar, 2020 - 30, April, 2020)</i></li>
-                    <li><i>Web Development Intern at Learnovate e-commerce (15, Aug, 2021 - 15, Sept, 2021)</i></li>
-                    <li><i>Data Analytics & Customer Success Engineer at Capillary Technologies (22, Feb, 2022 - 22, August, 2022)</i></li>
-                    <li><i>Worked as An Associate software Engineer for Global logic where I was in crawzals team of GOOGLE</i></li>
-                    <li><i>Working as Robotics Instructor for Robochamps (USA/UK/Middle East STUDENTS)</i></li>
-                </ul>
-            </section>
+<header>
+    <h1>Resume - Mohd Faiz Faheem</h1>
+</header>
 
-            <section id="projects">
-                <h2>Projects</h2>
-                <ul>
-                    <li><i>Employee management system using .Net MVC (Sept 2022 - December 2022) - Made an API for job portal.</i></li>
-                    <li><i>Capillary’s CRM System (Feb 2022 - Aug 2022): Worked as a debugger and a data analytics intern in capillary technologies got deep knowledge in all of their products and worked with Azure Databricks, SQL, Freshworks, and JIRA software.</i></li>
-                    <li><i>Movie name recommendation (May, 2021 - June, 2021): Movie recommendation system using Python and web development. Which recommends the movies according to what you type in the search bar.</i></li>
-                    <li><i>False product identification using Blockchain (Dec, 2020 - Jan, 2021): created a simple block chain project for detection of false product.</i></li>
-                    <li><i>Blockchain with java (Oct, 2020 - Nov, 2020): created a simple block chain in java</i></li>
-                    <li><i>Smart alarm system using IOT (May, 2020 - Jun, 2020): developed a smart alarm clock using IOT</i></li>
-                    <li><i>Soil type and temperature Recognition using IOT (Oct, 2019 - Nov, 2019): developed a device working on IOT using Arduino to check the temperature moisture and type of soil.</i></li>
-                </ul>
-            </section>
+<section>
+    <h2>Professional Summary</h2>
+    <p>A highly motivated software engineer with 2+ years of experience in full-stack development, data analytics, and quality assurance. Proficient in Java, Python, C++, and JavaScript, with expertise in developing and deploying scalable software solutions. Experienced in leading technical teams, conducting design/code reviews, and solving complex problems in large-scale distributed systems. Demonstrated success in collaborating with cross-functional teams to drive innovation and improve product quality.</p>
+</section>
 
-            <section id="technical-skills">
-                <h2>Technical Skills</h2>
-                <ul>
-                    <li><i>Languages:</i> Java, JavaScript, Python, C (proficient), C++ (proficient), IOT (proficient), HTML, SQL, .Net, C#</li>
-                    <li><i>Tools and Frameworks:</i> MATLAB, ARDUINO UNO, Azure Databricks, SSMS</li>
-                    <li><i>Other skills and Frameworks:</i> DBMS, OS, Data Structures and Algorithms, LATEX, Freshworks, Jira, Ms Office, .Net</li>
-                </ul>
-            </section>
-        </main>
-        <footer>
-            <p>&copy; 2023 Mohd Faiz Faheem</p>
-        </footer>
-    </div>
+<section>
+    <h2>Education</h2>
+    <p><strong>B.Tech in Computer Science Engineering</strong><br>Graphic Era University, Dehradun (2018-2022)<br>CGPA: 85.78%</p>
+</section>
 
-    <script>
-        // Add JavaScript functionality here if needed
-    </script>
+<section>
+    <h2>Technical Skills</h2>
+    <ul>
+        <li>Languages: Java, Python, C++, JavaScript, HTML, SQL</li>
+        <li>Frameworks & Tools: .NET MVC, Bootstrap, MATLAB, Azure Databricks, SSMS, Freshworks, JIRA</li>
+        <li>Technologies: Blockchain, IoT, Distributed Computing, Data Analytics, Cloud Technologies</li>
+        <li>Other Skills: Data Structures & Algorithms, DBMS, Operating Systems, Master Data Management, Socket Programming</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Work Experience</h2>
+
+    <h3>Quality Assurance Engineer & Robotics Instructor</h3>
+    <p><strong>BrightChamps (USA/UK/Middle East Students)</strong><br>Nov 2022 – Present</p>
+    <ul>
+        <li>Lead quality assurance testing for software products, identifying and resolving bugs to enhance user experience.</li>
+        <li>Instruct students on robotics, IoT, and programming, fostering an understanding of technology across international platforms.</li>
+        <li>Conducted over 50 technical interviews as part of the recruitment panel.</li>
+    </ul>
+
+    <h3>Associate Software Engineer (Google Crawzals Team)</h3>
+    <p><strong>GlobalLogic (Client: Google)</strong><br>Aug 2022 – Nov 2022</p>
+    <ul>
+        <li>Contributed to system design and development for Google Crawzals, optimizing performance for large-scale systems.</li>
+        <li>Collaborated with cross-functional teams to implement scalable solutions, enhancing overall project efficiency.</li>
+        <li>Engaged in design and code reviews to ensure adherence to best practices and guidelines.</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Projects</h2>
+    <ul>
+        <li><strong>Employee Management System (Sept 2022 – Dec 2022):</strong> Developed an API for a job portal using .NET MVC.</li>
+        <li><strong>Capillary CRM System (Feb 2022 – Aug 2022):</strong> Analyzed and debugged CRM systems using Azure Databricks and SQL.</li>
+        <li><strong>Movie Name Recommendation System (May 2021 – June 2021):</strong> Created a Python-based recommendation engine using machine learning.</li>
+        <li><strong>False Product Identification via Blockchain (Dec 2020 – Jan 2021):</strong> Designed a blockchain solution for counterfeit product detection.</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Certifications</h2>
+    <ul>
+        <li>Certified Engineer for Capillary Technologies’ Products</li>
+        <li>Robotics Trainer Certification</li>
+        <li>Master Data Management Certification (TCS)</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Leadership & Achievements</h2>
+    <ul>
+        <li>Head Assistant for IEEE College Chapter: Led organization of technical workshops.</li>
+        <li>Vice-Captain and Council Member at St. Mary’s School.</li>
+        <li>Organized Python and Machine Learning workshops with AIEEE and Scaler Academy.</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Additional Information</h2>
+    <ul>
+        <li>Hobbies: Cricket, fitness enthusiast, and avid debater.</li>
+        <li>Languages: English (Fluent), Hindi (Native).</li>
+    </ul>
+</section>
+
+<footer>
+    <p>&copy; 2024 All rights reserved Mohd Faiz Faheem</p>
+</footer>
+
 </body>
 </html>
